# PURESCRIPT_FORGE

./: .buckconfig  .gitignore  AGENTS.md  AGENT_QUICK_REFERENCE.md  BUCK  BUG_REPORT.md  KILL_NIX_PROCESSES.sh  MIGRATION_CHECKLIST.md  MIGRATION_PARITY_REPORT.md  MIGRATION_TODO.md  README.md  STATE_OF_PROJECT.md  deploy.nix  flake.nix  render.openapi.yaml
.claude/: settings.local.json
COMPASS/: flake.nix  remove-copyright-headers.ps1
COMPASS/src/opencode/sdk/codegen/: Main.hs  PS2JS.hs  codegen.cabal  generate.sh
NEXUS/: DEPLOYMENT.md  deploy.sh  fly.postgres.toml  fly.toml  load-test.sh
NEXUS/agent-orchestrator-edge-hs/: Dockerfile  nexus-agent-orchestrator-edge-hs.cabal
NEXUS/agent-orchestrator-edge-hs/src/Nexus/AgentOrchestrator/: Edge.hs  Region.hs
NEXUS/database-layer-hs/: nexus-database-layer-hs.cabal
NEXUS/database-layer-hs/src/Nexus/Database/: Postgres.hs
NEXUS/database-layer-hs/src/Nexus/Database/Postgres/: Operations.hs  Schema.hs
NEXUS/semantic-memory-distributed-hs/: nexus-semantic-memory-distributed-hs.cabal
PRISM/: build-all.sh
PRISM/prism-color-core/haskell/: prism-color-core.cabal
PRISM/prism-color-core/haskell/dist-newstyle/cache/: compiler
PRISM/prism-color-core/haskell/src/PrismColor/: SRGB.hs
PRISM/prism-color-core/haskell/test/: Spec.hs
REQUIRED/isospin-microvm-main/gpu-broker/: .gitignore  BUCK  Cargo.toml  SECURITY.md
REQUIRED/isospin-microvm-main/gpu-broker/kernel/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .nvidia-shim.ko.cmd  .nvidia-shim.mod.cmd  .nvidia-shim.mod.o.cmd  .nvidia-shim.o.cmd  Makefile  modules.order  nvidia-shim.c  nvidia-shim.ko  nvidia-shim.mod  nvidia-shim.mod.c
REQUIRED/isospin-microvm-main/gpu-broker/nvml-stub/: libnvidia-ml.so.1  nvml_stub.c
REQUIRED/isospin-microvm-main/gpu-broker/proptest-regressions/: broker.txt  transport.txt  uring.txt
REQUIRED/isospin-microvm-main/gpu-broker/proptest-regressions/guest_protocol/: tests.txt
REQUIRED/isospin-microvm-main/gpu-broker/src/: broker.rs  driver.rs  fd_passing.rs  firecracker_vsock.rs  guest_shim.rs  handle_table.rs  main.rs  nvml_server.rs  proxy.rs  rm_api.rs  server.rs  trace.rs  transport.rs  uring.rs  uring_transport.rs  vsock.rs
REQUIRED/isospin-microvm-main/gpu-broker/src/guest_protocol/: client.rs  invariants.rs  mod.rs  tests.rs  wire.rs
REQUIRED/isospin-microvm-main/gpu-broker/tracer/: Makefile  nv_trace.c
REQUIRED/isospin-microvm-main/gpu-broker/traces/: nvidia-smi-basic.json
_OTHER/: .gitignore  AGENT_SETUP_GUIDE.md  NIX_SETUP.md  QUICK_START.md  README.md  flake.nix
_OTHER/NEXUS/engram-attestation/engram-types/: engram-types.cabal
_OTHER/src/compiler-pipeline/purescript-to-cpp23/: purescript-to-cpp23.cabal
_OTHER/src/compiler-pipeline/purescript-to-cpp23/src/: ErrorHandling.hs  Optimizer.hs
_OTHER/src/compiler-pipeline/purescript-to-cpp23/tests/: GeneratorTests.hs  TypeCheckerTests.hs
_REFERENCE/: ARCHITECTURE.md  data_visualization.txt
_deprecated/: README.md
aleph-b7r6-continuity-0x08/: flake.nix
docs/: ALL_BUGS_SUMMARY_2026-02-05.md  ARCHITECTURE.md  BUGS_FOUND_AND_FIXED_2026-02-05.md  COMPREHENSIVE_AUDIT_2026-02-05.md  COMPREHENSIVE_BUG_ANALYSIS_2026-02-05.md  CRITICAL_GAPS_AND_FIXES_2026-02-05.md  DOCUMENTATION_UPDATE_LOG_2026-02-05.md  FINAL_COMPLETE_STATUS.md  MATHEMATICAL_FOUNDATIONS.md  OPENCLAW_PAIN_POINTS_ANALYSIS.md  PARITY_ANALYSIS_2026-02-05.md  PHASE4_COMPLETE.md  PRD.md  PRODUCTION_READINESS_TESTING_PLAN.md  README.md  RUNTIME_INVARIANTS.md  TESTING.md  TESTING_GAP_ANALYSIS_SUMMARY.md  TMUX_EMACS_FEATURES_ANALYSIS.md  VERIFICATION_REPORT_2026-02-05.md  VISION.md
opencode-sidepanel-specs/: 01-EXECUTIVE-SUMMARY.md  07-PROJECT-STRUCTURE.md  09-CONTRIBUTING-GUIDELINES.md  14-RATE-LIMIT-HANDLING.md  15-COST-PROJECTION.md  16-MODEL-SELECTION.md  24-MESSAGE-FLOW.md  24-MULTI-SESSION-MANAGEMENT.md  25-TOOL-EXECUTION.md  30-BRIDGE-ARCHITECTURE.md  (+16 more)
src/render-billing-hs/: render-billing-hs.cabal
src/render-billing-hs/src/Render/Billing/: NVXT.hs
src/render-billing-hs/test/: Test.hs
src/render-billing-hs/test/property/: NVXTProps.hs
src/render-billing-hs/test/unit/: NVXTSpec.hs
src/render-cas-hs/: render-cas-hs.cabal
src/render-cas-hs/src/Render/CAS/: Client.hs
src/render-cas-hs/test/: Test.hs
src/render-cas-hs/test/integration/: CASIntegrationSpec.hs
src/render-cas-hs/test/unit/: CASClientSpec.hs
src/render-clickhouse-hs/: render-clickhouse-hs.cabal
src/render-clickhouse-hs/src/Render/ClickHouse/: Client.hs
src/render-clickhouse-hs/test/: Test.hs
src/render-clickhouse-hs/test/property/: ClickHouseClientProps.hs
src/render-clickhouse-hs/test/unit/: ClickHouseClientSpec.hs
src/render-compliance-hs/: render-compliance-hs.cabal
src/render-compliance-hs/src/Render/Compliance/: AuditTrail.hs
src/render-compliance-hs/test/: Test.hs
src/render-compliance-hs/test/integration/: ComplianceIntegrationSpec.hs
src/render-compliance-hs/test/property/: HashChainProps.hs
src/render-compliance-hs/test/unit/: AuditTrailSpec.hs
src/render-gateway-hs/: render-gateway-hs.cabal
src/render-gateway-hs/app/: Main.hs
src/render-gateway-hs/src/Render/Gateway/: Backend.hs  Core.hs  Server.hs
src/render-gateway-hs/src/Render/Gateway/ClickHouse/: Schema.hs
src/render-gateway-hs/src/Render/Gateway/STM/: CircuitBreaker.hs  Clock.hs  Queue.hs  RateLimiter.hs
src/render-gateway-hs/test/: Integration.hs  IntegrationTest.hs  Test.hs
src/render-gateway-hs/test/integration/: GatewayBackendSpec.hs  GatewayCircuitBreakerSpec.hs  GatewayJobStoreSpec.hs  GatewayQueueSpec.hs  GatewayRateLimiterSpec.hs
src/render-gateway-hs/test/property/: BackendProps.hs  CircuitBreakerProps.hs  JobStoreProps.hs  QueueProps.hs  RateLimiterProps.hs
src/render-gateway-hs/test/unit/: BackendSpec.hs  CoreSpec.hs  QueueSpec.hs  RateLimiterSpec.hs  ServerSpec.hs
src/render-gateway-hs/test/unit/Capacity/: QueueingSpec.hs
src/render-gateway-hs/test/unit/ClickHouse/: SchemaSpec.hs
src/render-gateway-hs/test/unit/STM/: CircuitBreakerSpec.hs  ClockSpec.hs  QueueSpec.hs  RateLimiterSpec.hs
(+2506 files in other folders)
