cabal-version: 3.0
name: nexus-agent-orchestrator-edge-hs
version: 0.1.0.0
synopsis: Edge-aware agent orchestrator for Nexus
description: Haskell implementation of edge-native agent launcher with Fly.io integration
license: MIT
author: Nexus Team
maintainer: nexus@example.com
build-type: Simple

library
  exposed-modules:
    Nexus.AgentOrchestrator.Edge
    Nexus.AgentOrchestrator.Region
    Nexus.AgentOrchestrator.FlyIO
  hs-source-dirs: src
  build-depends:
    base >= 4.17 && < 5.0
    , aeson >= 2.2.0.0
    , bytestring >= 0.11.5.0
    , text >= 2.0.2
    , http-conduit >= 2.3.8
    , http-types >= 0.12.3
    , http-client >= 0.7.13
    , network >= 3.1.2.7
    , containers >= 0.6.7
    , time >= 1.12.0.1
    , mtl >= 2.3.1
    , exceptions >= 0.10.5
  default-language: Haskell2010
  ghc-options: -Wall -Werror

executable nexus-edge-orchestrator-cli
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.17 && < 5.0
    , nexus-agent-orchestrator-edge-hs
    , aeson >= 2.2.0.0
    , bytestring >= 0.11.5.0
    , text >= 2.0.2
    , optparse-applicative >= 0.17.0.0
    , containers >= 0.6.7
  default-language: Haskell2010
  ghc-options: -Wall -Werror
