cabal-version: 3.0
name: render-billing-hs
version: 0.1.0
build-type: Simple

library
  exposed-modules:
    Render.Billing.NVXT
  build-depends:
    base >= 4.18 && < 5.0
    , stm >= 2.5
    , text >= 2.0
    , time >= 1.12
    , uuid >= 1.3
    , render-cas-hs
    , bytestring >= 0.11
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2 -fno-warn-orphans

test-suite render-billing-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base >= 4.18 && < 5.0
    , render-billing-hs
    , hspec >= 2.10
    , QuickCheck >= 2.14
    , stm >= 2.5
    , text >= 2.0
    , time >= 1.12
    , uuid >= 1.3
  default-language: Haskell2010
  ghc-options: -Wall -O2
