cabal-version: 3.0
name: render-cas-hs
version: 0.1.0
build-type: Simple
synopsis: Content-Addressed Storage Client with Cryptographic Attestation

library
  exposed-modules:
    Render.CAS.Client
  hs-source-dirs: src
  build-depends:
    base >= 4.18 && < 5.0
    , text >= 2.0
    , time >= 1.12
    , bytestring >= 0.11
    , aeson >= 2.0
    , containers >= 0.7
    , http-client >= 0.7
    , http-types >= 0.12
    , base16-bytestring >= 1.0
    , crypton >= 0.34
    , memory >= 0.18
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite render-cas-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base >= 4.18 && < 5.0
    , render-cas-hs
    , hspec >= 2.10
    , QuickCheck >= 2.14
    , hspec-discover >= 2.10
    , text >= 2.0
    , bytestring >= 0.11
    , time >= 1.12
    , aeson >= 2.0
    , containers >= 0.7
    , base16-bytestring >= 1.0
    , crypton >= 0.34
  default-language: Haskell2010
  ghc-options: -Wall -O2
