cabal-version: 3.0
name: render-clickhouse-hs
version: 0.1.0
build-type: Simple
synopsis: ClickHouse Client for Hot-Path Metrics

library
  exposed-modules:
    Render.ClickHouse.Client
  hs-source-dirs: src
  build-depends:
    base >= 4.18 && < 5.0
    , text >= 2.0
    , time >= 1.12
    , bytestring >= 0.11
    , http-client >= 0.7
    , http-types >= 0.12
    , aeson >= 2.0
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite render-clickhouse-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base >= 4.18 && < 5.0
    , render-clickhouse-hs
    , hspec >= 2.10
    , QuickCheck >= 2.14
    , text >= 2.0
    , time >= 1.12
    , aeson >= 2.0
  default-language: Haskell2010
  ghc-options: -Wall -O2
