cabal-version: 3.0
name: render-compliance-hs
version: 0.1.0
build-type: Simple
synopsis: Compliance and Audit Trail for Render Gateway

library
  exposed-modules:
    Render.Compliance.AuditTrail
  hs-source-dirs: src
  build-depends:
    base >= 4.18 && < 5.0
    , text >= 2.0
    , time >= 1.12
    , bytestring >= 0.11
    , containers >= 0.7
    , crypton >= 0.34
    , memory >= 0.18
    , cryptonite >= 0.30
    , render-clickhouse-hs
    , render-cas-hs
    , duckdb-simple >= 0.1
    , http-client >= 0.7
    , http-types >= 0.12
    , aeson >= 2.0
    , base16-bytestring >= 1.0
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite render-compliance-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base >= 4.18 && < 5.0
    , render-compliance-hs
    , hspec >= 2.10
    , QuickCheck >= 2.14
    , text >= 2.0
    , time >= 1.12
    , bytestring >= 0.11
    , aeson >= 2.0
  default-language: Haskell2010
  ghc-options: -Wall -O2
