cabal-version: 3.0
name: render-gateway-hs
version: 0.1.0
build-type: Simple
synopsis: Render Gateway HTTP Server for Weyl AI

executable render-gateway
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.18 && < 5.0
    , render-gateway-hs
    , stm >= 2.5
    , containers >= 0.7
    , text >= 2.0
    , time >= 1.12
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

library
  exposed-modules:
    Render.Gateway.STM.Queue
    Render.Gateway.STM.RateLimiter
    Render.Gateway.STM.CircuitBreaker
    Render.Gateway.STM.Clock
    Render.Gateway.Backend
    Render.Gateway.Core
    Render.Gateway.Server
  hs-source-dirs: src
  build-depends:
    base >= 4.18 && < 5.0
    , stm >= 2.5
    , time >= 1.12
    , containers >= 0.7
    , text >= 2.0
    , aeson >= 2.0
    , wai >= 3.2
    , warp >= 3.3
    , bytestring >= 0.11
    , http-client >= 0.7
    , http-types >= 0.12
    , uuid >= 1.3
    , base64-bytestring >= 1.2
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite render-gateway-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  other-modules: Integration
  build-depends:
    base >= 4.18 && < 5.0
    , render-gateway-hs
    , hspec >= 2.10
    , QuickCheck >= 2.14
    , hspec-discover >= 2.10
    , stm >= 2.5
    , time >= 1.12
    , containers >= 0.7
    , text >= 2.0
    , aeson >= 2.0
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded

test-suite render-gateway-integration-tests
  type: exitcode-stdio-1.0
  main-is: IntegrationTest.hs
  hs-source-dirs: test
  build-depends:
    base >= 4.18 && < 5.0
    , render-gateway-hs
    , hspec >= 2.10
    , stm >= 2.5
    , time >= 1.12
    , containers >= 0.7
    , text >= 2.0
    , aeson >= 2.0
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded
