[package]
name = "gpu-broker"
version = "0.1.0"
edition = "2021"
description = "GPU multiplexer daemon - proxies NVIDIA RM API calls from multiple VMs to a single hot GPU"

[features]
default = ["std"]
std = []

[dependencies]
# io_uring for high-performance async I/O
io-uring = "0.7"

# Shared memory regions
memmap2 = "0.9"

# Async runtime (optional, might go pure io_uring)
# tokio = { version = "1", features = ["rt-multi-thread", "net", "sync"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization for IPC protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zerocopy = { version = "0.8", features = ["derive"] }
flate2 = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# ioctl definitions
nix = { version = "0.29", features = ["ioctl", "mman", "fs"] }
libc = "0.2"

# Command line
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[[bin]]
name = "gpu-broker"
path = "src/main.rs"

[[bin]]
name = "guest-shim"
path = "src/bin/guest-shim.rs"
