cabal-version: 3.0
name: engram-types
version: 0.1.0.0
synopsis: Nexus Engram Attestation - Generative Models for Semantic Cells
description: Haskell implementation of generative models for semantic cell prediction.
license: MIT
author: FORGE
maintainer: FORGE
build-type: Simple

library
  exposed-modules:
    Engram.Predictive.Model
    Engram.Predictive.Temporal
    Engram.Predictive.Neighbor
    Engram.Predictive.Perturbation
  hs-source-dirs: src
  build-depends:
    base >= 4.17 && < 5.0
    , vector >= 0.13.0.0
    , linear >= 1.22.0.0
    , random >= 1.2.0.0
    , aeson >= 2.1.0.0
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2

test-suite engram-types-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base >= 4.17 && < 5.0
    , engram-types
    , hspec >= 2.11.0.0
    , QuickCheck >= 2.14.0.0
  default-language: Haskell2010
