cabal-version: 3.0
name: purescript-to-cpp23
version: 0.1.0.0
build-type: Simple

executable purescript-to-cpp23
  main-is: src/Main.hs
  other-modules:
    Parser
    Cpp23Generator
    TypeChecker
    ErrorHandling
  hs-source-dirs: src
  build-depends:
    base >= 4.18 && < 5,
    text >= 2.0,
    megaparsec >= 9.6,
    bytestring >= 0.11,
    containers >= 0.6
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite parser-tests
  type: exitcode-stdio-1.0
  main-is: tests/ParserTests.hs
  build-depends:
    base >= 4.18 && < 5,
    text >= 2.0,
    megaparsec >= 9.6,
    hspec >= 2.10
  other-modules:
    Parser
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall

test-suite generator-tests
  type: exitcode-stdio-1.0
  main-is: tests/GeneratorTests.hs
  build-depends:
    base >= 4.18 && < 5,
    text >= 2.0,
    megaparsec >= 9.6,
    hspec >= 2.10
  other-modules:
    Parser
    Cpp23Generator
  hs-source-dirs: src, tests
  default-language: Haskell2010
  ghc-options: -Wall

test-suite typechecker-tests
  type: exitcode-stdio-1.0
  main-is: tests/TypeCheckerTests.hs
  build-depends:
    base >= 4.18 && < 5,
    text >= 2.0,
    megaparsec >= 9.6,
    hspec >= 2.10
  other-modules:
    Parser
    TypeChecker
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall

benchmark benchmarks
  type: exitcode-stdio-1.0
  main-is: ../production/Benchmarks.hs
  build-depends:
    base >= 4.18 && < 5,
    text >= 2.0,
    megaparsec >= 9.6,
    criterion >= 1.6
  other-modules:
    Parser
    Cpp23Generator
    Optimizer
  hs-source-dirs: src, ../production
  default-language: Haskell2010
  ghc-options: -Wall -O2
