cabal-version: 3.0
name: opencode-sdk-codegen
version: 0.1.0.0
build-type: Simple

executable codegen
  main-is: Main.hs
  build-depends:
    base >= 4.14 && < 5
    , aeson >= 2.0
    , text >= 2.0
    , bytestring >= 0.11
    , filepath >= 1.4
  default-language: Haskell2010
  ghc-options: -Wall -Werror
